fixed the edit shift functionality, so that the UpcomingRequests doesn't crash after a shift is edited

--- a/client_app/src/styles/shelter/UpcomingShifts.css
+++ b/client_app/src/styles/shelter/UpcomingShifts.css
@@ -1,4 +1,4 @@
-.upcoming-requests {
+.upcoming-shifts {
   padding: 20px;
 }
 
